src/sass/common/_header.scss
/* ... */
.cs_header_search_box {
  display: flex;
  align-items: center;
  gap: 0 30px;
  @media (max-width: 991px) {
    gap: 0 15px;
  }
}
@media screen and (max-width: 1199px) {
  .cs_main_header .container {
    max-width: 100%;
  }

  .cs_site_header.cs_style1 {
    .cs_nav {
      display: flex;
    }
  }
}

.cs_nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.cs_sticky_header {
  position: fixed !important;
  width: 100%;
  z-index: 999;
}
.cs_gescout_sticky {
  position: fixed !important;
  top: -110px;
  opacity: 0;
  visibility: hidden;
  transition: all 0.4s ease;
  background-color: #fff;
  .cs_main_header_in {
    height: 90px;
  }
  &.cs_white_color {
    background-color: $primary;
  }
}

.cs_gescout_show {
  top: 0 !important;
  opacity: 1;
  visibility: visible;
  box-shadow: 0px 1px 2px 0px rgba(2, 0, 181, 0.1);
}

.cs_site_branding {
  display: inline-block;
}

@media screen and (min-width: 1200px) {
  .cs_site_header.cs_style1.cs_white_color {
    .menu-item-has-children {
      ul {
        color: $primary;
      }
    }
  }
  .cs_main_header {
    position: relative;

    .container-fluid {
      padding-right: 40px;
      padding-left: 40px;
    }
  }

  .cs_main_header_center,
  .cs_top_header_center {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
  }

  .cs_site_header.cs_style1 {
    .cs_main_header_center {
      display: flex;
      justify-content: center;
      align-items: center;
      height: 100%;
      width: 100%;
      max-width: calc(100% - 300px);
    }
    .cs_main_header_left {
      height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 20px 124px;
    }
  }

  .cs_nav {
    display: flex;
    align-items: center;
    height: 100%;
    line-height: 1.6em;

    .cs_nav_list {
      display: flex !important;
      flex-wrap: wrap;
      height: inherit;

      > li {
        margin-right: 50px;
        height: inherit;

        &:last-child {
          margin-right: 0;
        }

        > a {
          padding: 10px 0;
          display: inline-flex;
          position: relative;
          height: inherit;
          align-items: center;
          font-size: 17px;
        }

        > ul {
          left: 0;
          top: calc(100% + 15px);
        }

        &:hover {
          > ul {
            top: 100%;
            opacity: 1;
            visibility: visible;
            transition: all 0.4s ease;
          }
        }
        &.menu-item-has-children {
          > a {
            position: relative;
            &::after {
              content: "";
              display: inline-block;
              height: 6px;
              width: 6px;
              border: 2px solid currentColor;
              transform: rotate(45deg);
              border-left: 0;
              border-top: 0;
              margin-left: 6px;
              position: relative;
              top: -1px;
              border-radius: 0px 0px 2px 0px;
            }
          }
        }
      }

      li:not(.cs_mega_menu) {
        position: relative;
      }

      ul {
        width: 260px;
        background-color: #fff;
        position: absolute;
        box-shadow: 0px 1px 2px 0px rgba(2, 0, 181, 0.1);
        padding: 10px 0;
        z-index: 100;
        opacity: 0;
        visibility: hidden;
        display: block !important;
        border-radius: 15px;
        box-shadow: 0px 4px 21px 1px rgba(48, 123, 196, 0.1);
        transition: all 0.1s ease;

        li {
          &:hover {
            ul {
              top: 0px;
            }

            > ul {
              opacity: 1;
              visibility: visible;
              transition: all 0.4s ease;
            }
          }
        }

        a {
          display: block;
          line-height: inherit;
          padding: 10px 20px;
        }

        ul {
          top: 15px;
          left: 100%;
        }
      }
    }
  }
  .cs_menu_toggle,
  .cs_munu_dropdown_toggle {
    display: none;
  }

  .cs_nav .cs_nav_list {
    .cs_mega_menu {
      position: relative;
    }
    .cs_mega_wrapper {
      width: 475px !important;
      left: 0;
      display: flex !important;
      position: absolute;
      padding: 5px 15px 10px;

      a {
        padding: 7px 10px;
      }

      > li {
        flex: 1;
        padding: 10px 0;

        > a {
          font-size: 20px;
          font-weight: 600;
          pointer-events: none;
          &:hover {
            background-color: transparent;
          }
        }

        ul {
          position: initial;
          border: none;
          padding: 0;
          width: 100%;
          box-shadow: none;
          background-color: transparent;
          a {
            transition: all 0.4s ease;
            &:hover {
              letter-spacing: 1px;
            }
          }
        }
      }
    }

    .cs_mega_menu {
      &:hover {
        .cs_mega_wrapper {
          li ul {
            opacity: 1;
            visibility: visible;
          }
        }
      }
    }
  }

  .cs_nav
    .cs_nav_list
    > li
    ul:not(.cs_mega_wrapper)
    .menu-item-has-children
    > a {
    position: relative;
  }
}

@media screen and (max-width: 1400px) {
  .cs_nav .cs_nav_list .cs_mega_wrapper {
    width: 1116px !important;
  }

  .cs_site-branding {
    max-width: 190px;
  }

  .cs_site_header_full_width .container {
    max-width: 100%;
  }
}
/* ... */

